--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ Temp/
 VectorBall.CSharp.csproj
 VectorBall.sln
 *.DS_Store
+vectorball/Assembly-CSharp.csproj
+vectorball/vectorball.userprefs
+vectorball/Assets/Cartoon UI Pack.meta
+vectorball/Assets/Cartoon UI Pack/
