Added to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ vectorball/Assembly-CSharp.csproj
 vectorball/vectorball.userprefs
 vectorball/Assets/Cartoon UI Pack.meta
 vectorball/Assets/Cartoon UI Pack/
+vectorball/Assembly-UnityScript.unityproj
