--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ vectorball/vectorball.userprefs
 vectorball/Assets/Cartoon UI Pack.meta
 vectorball/Assets/Cartoon UI Pack/
 vectorball/Assembly-UnityScript.unityproj
+
+*.meta
